@@ -66,17 +66,25 @@ PORTSTOP=	yes
 
 index: 	${INDEXDIR}/${INDEXFILE}
 
-fetchindex: ${INDEXDIR}/${INDEXFILE}.bz2
-	@if bunzip2 < ${INDEXDIR}/${INDEXFILE}.bz2 > ${INDEXDIR}/${INDEXFILE}.tmp ; then \
+INDEX_COMPRESSION_FORMAT?=	xz
+
+.if ${INDEX_COMPRESSION_FORMAT} != xz && \
+	${INDEX_COMPRESSION_FORMAT} != bz2 && ${INDEX_COMPRESSION_FORMAT} != zst
+.error "Invalid compression format: ${INDEX_COMPRESSION_FORMAT}, expecting xz, bz2 or zst"
+.endif
+
+fetchindex: ${INDEXDIR}/${INDEXFILE}.${INDEX_COMPRESSION_FORMAT}
+	@if bsdcat < ${INDEXDIR}/${INDEXFILE}.${INDEX_COMPRESSION_FORMAT} > ${INDEXDIR}/${INDEXFILE}.tmp ; then \
 		chmod a+r ${INDEXDIR}/${INDEXFILE}.tmp; \
 		${MV} ${INDEXDIR}/${INDEXFILE}.tmp ${INDEXDIR}/${INDEXFILE}; \
-		${RM} ${INDEXDIR}/${INDEXFILE}.bz2 \
+		${RM} ${INDEXDIR}/${INDEXFILE}.${INDEX_COMPRESSION_FORMAT} \
 	else ; \
 		${RM} ${INDEXDIR}/${INDEXFILE}.tmp ; \
 	fi
 
-${INDEXDIR}/${INDEXFILE}.bz2: .PHONY
-	${FETCHINDEX} ${INDEXDIR}/${INDEXFILE}.bz2 ${MASTER_SITE_INDEX}${INDEXFILE}.bz2
+${INDEXDIR}/${INDEXFILE}.${INDEX_COMPRESSION_FORMAT}: .PHONY
+	${FETCHINDEX} ${INDEXDIR}/${INDEXFILE}.${INDEX_COMPRESSION_FORMAT} \
+		${MASTER_SITE_INDEX}${INDEXFILE}.${INDEX_COMPRESSION_FORMAT}
 
 MASTER_SITE_INDEX?=	https://www.FreeBSD.org/ports/
 SETENV?=	/usr/bin/env
